--- a/templates/zhihu/index.html
+++ b/templates/zhihu/index.html
@@ -33,10 +33,10 @@
                 <a href="{% url 'question_detail' answer.question_id %}"><h3>{{ answer.question.title }}</h3></a>
             </div>
             <div class="question-answer">
-                <p>{{ answer.content|truncatechars:200|safe }}</p>
+                <a href="{% url 'answer_detail' answer.id %}"><p>{{ answer.content|truncatechars:200|safe }}</p></a>
             </div>
             <div class="answer-meta">
-              <a href=""><button type="button" class="btn btn-default btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span>99</button></a>
+              <a href=""><button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span>99</button></a>
               <a href=""><button type="button" class="btn btn-default btnvote-down"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
               <a href=""><button type="button" class="btn btn-default">19 条评论</button></a>
               <a href=""><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-star"></span>收藏</button></a>
