--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,8 @@
 
     <div class="collapse navbar-collapse" id="mynav">
       <ul class="nav navbar-nav">
-        <li class="{% block nav_home_active %}{% endblock %}"><a href="{% url 'index' %}">首页</a></li>
-        <li class="{% block nav_blog_active %}{% endblock %}"><a href="">发现</a></li>
+        <li class="active"><a href="{% url 'index' %}">首页</a></li>
+        <li class=""><a href="{% url 'explore' %}">发现</a></li>
         <li><a href="">话题</a></li>
       </ul>
       <form class="navbar-form navbar-left">
