--- a/templates/base.html
+++ b/templates/base.html
@@ -49,11 +49,11 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="">登录/注册</a></li>
         <li class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button">用户名
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button">{{ request.user.username }}
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="">个人资料</a></li>
-            <li><a href="">退出登录</a></li>
+            <li><a href="{% url 'user_logout' %}">退出登录</a></li>
           </ul>
         </li>
       </ul>
