--- a/templates/zhihu/index.html
+++ b/templates/zhihu/index.html
@@ -74,10 +74,10 @@
     
 
     <div class="site-box">
-      <p>加入知乎儿, 留下手印</p>
+      <h4>加入知乎儿, 留下手印</h4>
       <p>
-        <button class="btn btn-primary btn-lg btn-block">注册</button>
-        <button class="btn btn-default btn-lg btn-block">登录</button>
+        <a target="_blank" href="{% url 'register' %}"><button class="btn btn-default btn-lg btn-block">注册</button></a>
+        <a target="_blank" href="{% url 'user_login' %}"><button class="btn btn-default btn-lg btn-block">登录</button></a>
       </p>
     </div>
 
