发送邮件, 用户注册账户激活

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,9 @@
 
 {% endblock %}
 
+{% block custom_js %}
+
+{% endblock %}
 <footer class="footer">
   <p class="text-center text-muted">taoing的知乎儿</p>
   <p class="text-right"><a href="#">回到顶部</a></p>
