--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="{% url 'index' %}">首页</a></li>
         <li class=""><a href="{% url 'explore' %}">发现</a></li>
-        <li><a href="">话题</a></li>
+        <li><a href="{% url 'topic_list' %}">话题</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
