--- a/templates/zhihu/question_detail.html
+++ b/templates/zhihu/question_detail.html
@@ -33,13 +33,13 @@
               <p>一点示例文本, 一点示例文本</p>
             </div>
           </div>
-          <p class="text-muted">{{ answer.get_vote_on_nums }} 人赞同了该回答</p>
+          <p class="text-muted">{{ answer.follow_nums }} 人赞同了该回答</p>
           <p>
             {{ answer.content }}
           </p>
           <p class="text-muted">编辑于 {{ answer.pub_time }}</p>
           <div class="answer-meta">
-            <a href=""><button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.get_vote_on_nums }}</button></a>
+            <a href=""><button type="button" class="btn btn-primary btnvote-up"><span class="glyphicon glyphicon-triangle-top"></span> {{ answer.follow_nums }}</button></a>
             <a href=""><button type="button" class="btn btn-default btnvote-down"><span class="glyphicon glyphicon-triangle-bottom"></span></button></a>
             <a href="{% url 'answer_detail' answer.id %}"><button type="button" class="btn btn-default">{{ answer.comment_nums }} 条评论</button></a>
             <a href=""><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-star"></span>收藏</button></a>
