回答赞同,回答收藏, 问题关注, 回答评论, 个人主页动态页

--- a/static/css/zhihu.css
+++ b/static/css/zhihu.css
@@ -87,8 +87,11 @@ p {
     border-bottom: 1px dotted #ddd;
 }
 
-.topic-follow, .look-more {
+.topic-follow, .look-more, .time-right {
     font-size: 14px;
     right: 25px;
     position: absolute;
+}
+.trend-item {
+    
 }
