--- a/templates/base.html
+++ b/templates/base.html
@@ -48,14 +48,16 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="">登录/注册</a></li>
+        {% if request.user.is_authenticated %}
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button">{{ request.user.username }}
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="">个人资料</a></li>
+            <li><a href="{% url 'user_home' request.user.id %}">个人资料</a></li>
             <li><a href="{% url 'user_logout' %}">退出登录</a></li>
           </ul>
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
