--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load myfilter %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,7 +33,7 @@
         <div class="form-group">
           {{ field.errors }}
           {{ field.label_tag }}
-          {{ field }}
+          {{ field|widget_add_class:'form-control' }}
         </div>
         {% endfor %}
         <input type="submit" name="" value="注册">
